--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "express": "^4.18.2",
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.5.0"
+    "mongoose": "^7.5.0",
+    "express-rate-limit": "^6.7.0",
+    "express-mongo-sanitize": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
